--- a/comentarios.html
+++ b/comentarios.html
@@ -9,13 +9,14 @@
 </head>
 
 <body>
+    <h1>Comentarios</h1>
     <section id="cont-all">
         <section id="coments">
             <div class="comentario">
                 <div class="usuario-info">
-                    <p>Nombre</p>
+                    <p class="user">Jorgito</p>
                     <div>
-                        <p>✰</p>
+                        <p class="star-coment">★★★★</p>
                     </div>
                 </div>
                 <div class="usuario-coment">
@@ -28,7 +29,7 @@
         </section>
         <div id="my-comment">
             <div class="cont-info">
-                <input placeholder="Tu Nombre" type="text" name="" id="name">
+                <input placeholder="Tu Nombre" type="text" name="" class="text" id="name">
             </div>
             <div id="start-content">
                 <button onclick="star(this)" class="star-no-select">★</button>
@@ -37,8 +38,8 @@
                 <button onclick="star(this)" class="star-no-select">★</button>
                 <button onclick="star(this)" class="star-no-select">★</button>
             </div>
-            <input placeholder="Tu Comentario" type="text" name="" id="coment">
-            <button onclick="publicar()" id="publi">Publicar</button>
+            <input placeholder="Tu Comentario" type="text" name="" class="text" id="coment">
+            <button onclick="publicar()" class="text" id="publi">Publicar</button>
         </div>
     </section>
 </body>
