--- a/comentarios.html
+++ b/comentarios.html
@@ -12,29 +12,28 @@
 
 <body >
     <div id="tooo">
-        <div id="tooo2">
-            <img id="izquierda" src="izquierda-removebg-preview.png">
-            <img id="flor1" src="flor1-removebg-preview.png">
-
+        <div id="tooo2">    
             <div>
                 <div id="monita">
                     <div id="pintura">
                         <img src="asd.png">
                     </div>
-                    <div id="texto"><img id="idk" src="idk-removebg-preview.png">
+                    <div id="texto">
                         <p>mona lisa <br>79 x 53 cm<br>pintada:1503 y <br>1519</p>
                     </div>
                 </div>
             </div>
         </div>
-        <div>
-            <div>
+        <div id="chao">
+            <div id="diablo">
                 <h1>Renato</h1>
-                <p>asd</p>
+                <p>es perfecta me <br>encantam sus ojosh<br>
+                    hermosos y me enamoro  <br>cada dia mas</p>
             </div>
-            <div>
+            <div id="diablo2">
                 <h1>Frank</h1>
-                <p></p>
+                <p>cada dia se vuelve mas <br>bella y es una obra divina,<br>
+                    algo ecepcional ante los <br>ojos</p>
             </div>
         </div>
     </div>
